--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "34b06433",
    "metadata": {},
    "outputs": [
@@ -10,18 +10,117 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
       "hello world\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "print(\"hello world\");"
+    "for i in range(100):\n",
+    "    print(\"hello world\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "id": "3579f9c4",
    "metadata": {},
    "outputs": [
@@ -34,12 +133,12 @@
     }
    ],
    "source": [
-    "print(2+2.44);"
+    "print(2+2.44)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "id": "4852ce62",
    "metadata": {},
    "outputs": [
@@ -58,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
    "id": "5484064b",
    "metadata": {},
    "outputs": [
@@ -68,7 +167,7 @@
        "int"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "id": "635e7bdf",
    "metadata": {},
    "outputs": [
@@ -98,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "id": "7e2809d2",
    "metadata": {},
    "outputs": [
@@ -121,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "id": "ed40a213",
    "metadata": {},
    "outputs": [
@@ -140,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "id": "8b67fb42",
    "metadata": {},
    "outputs": [
@@ -160,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "id": "c27bc1f4",
    "metadata": {},
    "outputs": [
@@ -168,17 +267,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0\n"
+      "4.0\n"
      ]
     }
    ],
    "source": [
-    "print(x.real)"
+    "print(y.real)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "id": "16a726ec",
    "metadata": {},
    "outputs": [
@@ -196,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "id": "73c605ee",
    "metadata": {},
    "outputs": [
@@ -204,18 +303,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[70]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(x)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mtype\u001b[39m(x)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m z=\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m z<\u001b[32m18\u001b[39m:\n\u001b[32m      6\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33meligable\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: ''"
+      "6\n",
+      "eligable\n"
      ]
     }
    ],
@@ -230,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "65b970b9",
    "metadata": {},
    "outputs": [
@@ -249,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "5f1bc23b",
    "metadata": {},
    "outputs": [
@@ -267,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "c627f861",
    "metadata": {},
    "outputs": [
@@ -286,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "3cbfd8eb",
    "metadata": {},
    "outputs": [
@@ -304,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "12a9258d",
    "metadata": {},
    "outputs": [
@@ -322,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "570c36b2",
    "metadata": {},
    "outputs": [
@@ -340,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "b6669504",
    "metadata": {},
    "outputs": [
@@ -374,10 +463,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0f2eb05",
+   "id": "0186b70a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fruits=[\"apple\",\"banana\",\"orange\"]\n",
+    "print(fruits)\n"
+   ]
   }
  ],
  "metadata": {
